--- a/public/style.css
+++ b/public/style.css
@@ -1,45 +1,80 @@
-* { 
-    margin: 0; 
-    padding: 0; 
-    box-sizing: border-box; 
-}
-
 body { 
-    font: 13px Helvetica, Arial; 
+    font-family: 'Manjari', sans-serif;
 }
 
-.message_input form { 
-    background: #000; 
-    padding: 3px; 
-    position: fixed; 
-    bottom: 0; 
-    width: 100%; 
+h1 {
+    font-size: 20px;
+    padding: 10px 20px;
+    color: navy;
 }
 
-.message_input form input { 
-    border: 0; 
-    padding: 10px; 
-    width: 90%; 
-    margin-right: .5%; 
+.wonderChat {
+    max-width: 600px;
+    margin: 30px auto;
+    border: 1px solid white;
+    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
+    border-radius: 2px;
 }
 
-.message_input form button { 
-    width: 9%; 
-    background: rgb(130, 224, 255); 
-    border: none; 
-    padding: 10px; 
+.chatWindow {
+    height: 400px;
+    overflow: auto;
+    background: #f9f9f9;
 }
 
-#messages { 
-    list-style-type: none; 
-    margin: 0; 
-    padding: 0; 
+ul {
+    list-style-type: none;
 }
 
-#messages li { 
-    padding: 5px 10px; 
+li {
+    border-radius: 15px;
 }
 
-#messages li:nth-child(odd) { 
-    background: #eee; 
+#chatline li {
+    padding: 14px;
+    margin: 0 20px;
+    border-bottom: 1px solid #e9e9e9;
+    border-radius: 15px;
+}
+
+#feedback p {
+    color: #aaaaaa;
+    padding: 14px 0px;
+    margin: 0 20px;
+}
+
+label {
+    box-sizing: border-box;
+    display: block;
+    padding: 10px 20px;
+}
+
+input[type='text'] {
+    font-family: 'Manjari', sans-serif;
+    font-size: 16px;
+    width: 96.6%;
+    display: block;
+    border: 0;
+    background: #eeeeee;
+    padding: 10px;
+}
+
+button {
+    background: navy;
+    color: white;
+    font-size: 20px;
+    border: 0;
+    padding: 12px 0;
+    width: 100%;
+    border-radius: 0 0 2px 2px;
+}
+
+select {
+    font-family: 'Manjari', sans-serif;
+    font-size: 16px;
+    width: 100%;
+    display: block;
+    border: 0;
+    background: #eeeeee;
+    padding: 10px 0;
 }
