--- a/public/style.css
+++ b/public/style.css
@@ -26,21 +26,19 @@ ul {
     list-style-type: none;
 }
 
-li {
-    border-radius: 15px;
-}
-
 #chatline li {
     padding: 14px;
     margin: 0 20px;
     border-bottom: 1px solid #e9e9e9;
     border-radius: 15px;
+    width: 60%;
 }
 
 #feedback p {
     color: #aaaaaa;
     padding: 14px 0px;
     margin: 0 20px;
+    clear: both;
 }
 
 label {
